GH-79 nio object parser (#251)